chore: migrate ClerkJS pages to flattened paths

--- a/src/pages/reference-js/clerk/create-organization-component.mdx
+++ b/src/pages/reference-js/clerk/create-organization-component.mdx
@@ -1,20 +1,18 @@
 import { Tab, Tabs } from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# Sign In Component
+# `<CreateOrganization />`
 
-<Images width={496} height={564} src="/images/ui-components/component-sign_in.svg" alt="Sign in component example" />
+<Images alt="Organization Switcher Example" width={992} height={568} src="/images/ui-components/component-org_switcher.svg" />
 
-The `SignIn` component renders a UI for signing in users. The functionality of the `SignIn` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `SignIn` component by passing additional properties at the time of rendering.
+The `CreateOrganization` component is used to render an organization creation
+UI that allows users to create brand new organizations within you application.
 
-> All of these are methods on [an instance of the `Clerk` class](TODO).
+## `mountCreateOrganization()`
 
-## `mountSignIn()`
-
-Render the `SignIn` component to an HTML `<div>` element.
+Render the `CreateOrganization` component to an HTML `<div>` element.
 
 ### Usage
 
@@ -25,16 +23,16 @@ Render the `SignIn` component to an HTML `<div>` element.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="sign-in"
+      id="create-organization"
     ></div>
   `;
 
-  const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
+  const createOrganizationComponent = document.querySelector<HTMLDivElement>('#create-organization')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.mountSignIn(signInComponent, {
+  clerk.mountCreateOrganization(createOrganizationComponent, {
     appearance: {
       baseTheme: dark
     }
@@ -42,7 +40,7 @@ Render the `SignIn` component to an HTML `<div>` element.
   ```
 
   ```html {13-17}
-  <div id="sign-in"></div>
+  <div id="create-organization"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -52,9 +50,9 @@ Render the `SignIn` component to an HTML `<div>` element.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const signInComponent = document.querySelector('#sign-in');
+      const createOrganizationComponent = document.querySelector('#create-organization');
 
-      window.Clerk.openSignIn(signInComponent, {
+      window.Clerk.mountCreateOrganization(createOrganizationComponent, {
         appearance: {
           baseTheme: dark
         }
@@ -68,7 +66,7 @@ Render the `SignIn` component to an HTML `<div>` element.
 ### Props
 
 ```typescript
-function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
+function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizationProps): void;
 ```
 
 <Tables
@@ -78,22 +76,22 @@ function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the sign-in component</>
+  <>The <code>{`<div>`}</code> element used to render in the create-organization component</>
   ],
   },
   {
   cells: [
   "props?",
-  <a href="#signinprops"><code>SignInProps</code></a>,
-  "The properties to pass to the sign-in component",
+  <a href="#organizationprofileprops"><code>CreateOrganizationProps</code></a>,
+  "The properties to pass to the create-organization component",
   ],
   },
   ]}
 />
 
-## `unmountSignIn()`
+## `unmountCreateOrganization`
 
-Unmount and run cleanup on an existing SignIn component instance.
+Unmount and run cleanup on an existing CreateOrganization component instance.
 
 ### Usage
 
@@ -103,25 +101,25 @@ Unmount and run cleanup on an existing SignIn component instance.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="sign-in"
+      id="create-organization"
     ></div>
   `
 
-  const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
+  const createOrganizationComponent = document.querySelector<HTMLDivElement>('#create-organization')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
 
   await clerk.load();
 
-  clerk.mountSignIn(signInComponent);
+  clerk.mountCreateOrganization(createOrganizationComponent);
 
   // ...
 
-  clerk.unmountSignIn(signInComponent);
+  clerk.unmountCreateOrganization(createOrganizationComponent);
   ```
 
   ```html {17}
-  <div id="sign-in"></div>
+  <div id="create-organization"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -131,13 +129,13 @@ Unmount and run cleanup on an existing SignIn component instance.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const signInComponent = document.querySelector('#sign-in');
+      const createOrganizationComponent = document.querySelector('#create-organization');
 
-      window.Clerk.mountSignIn(signInComponent);
+      window.Clerk.mountCreateOrganization(createOrganizationComponent);
 
       // ...
 
-      window.Clerk.unmountSignIn(signInComponent);
+      window.Clerk.unmountCreateOrganization(createOrganizationComponent);
     });
     document.body.appendChild(script);
   </script>
@@ -147,7 +145,7 @@ Unmount and run cleanup on an existing SignIn component instance.
 ### Props
 
 ```typescript
-function unmountSignIn(node: HTMLDivElement): void;
+function unmountCreateOrganization(node: HTMLDivElement): void;
 ```
 
 <Tables
@@ -157,15 +155,15 @@ function unmountSignIn(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered sign-in component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered create-organization component instance</>
   ],
   },
   ]}
 />
 
-## `openSignIn()`
+## `openCreateOrganization`
 
-Opens the SignIn component as an overlay at the root of your HTML `body` element.
+Opens the CreateOrganization component as an overlay at the root of your HTML `body` element.
 
 ### Usage
 
@@ -174,10 +172,10 @@ Opens the SignIn component as an overlay at the root of your HTML `body` element
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.openSignIn({
+  clerk.openCreateOrganization({
     appearance: {
       baseTheme: dark
     }
@@ -194,7 +192,7 @@ Opens the SignIn component as an overlay at the root of your HTML `body` element
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      window.Clerk.openSignIn({
+      window.Clerk.openCreateOrganization({
         appearance: {
           baseTheme: dark
         }
@@ -208,7 +206,7 @@ Opens the SignIn component as an overlay at the root of your HTML `body` element
 ### Props
 
 ```typescript
-function openSignIn(props?: SignInProps): void;
+function openCreateOrganization(props?: CreateOrganizationProps): void;
 ```
 
 <Tables
@@ -217,16 +215,16 @@ function openSignIn(props?: SignInProps): void;
   {
   cells: [
   "props?",
-  <a href="#signinprops"><code>SignInProps</code></a>,
-  "The properties to pass to the sign-in component",
+  <a href="#organizationprofileprops"><code>CreateOrganizationProps</code></a>,
+  "The properties to pass to the create-organization component",
   ],
   },
   ]}
 />
 
-## `closeSignIn()`
+## `closeCreateOrganization`
 
-Closes the sign in overlay.
+Closes the organization profile overlay.
 
 ### Usage
 
@@ -235,14 +233,14 @@ Closes the sign in overlay.
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.openSignIn();
+  clerk.openCreateOrganization();
 
   // ...
 
-  clerk.closeSignIn();
+  clerk.closeCreateOrganization();
   ```
 
   ```html {14}
@@ -255,11 +253,11 @@ Closes the sign in overlay.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      window.Clerk.openSignIn();
+      window.Clerk.openCreateOrganization();
 
       // ...
 
-      window.Clerk.closeSignIn();
+      window.Clerk.closeCreateOrganization();
     });
     document.body.appendChild(script);
   </script>
@@ -269,10 +267,10 @@ Closes the sign in overlay.
 ### Props
 
 ```typescript
-function closeSignIn(): void;
+function closeCreateOrganization(): void;
 ```
 
-## `SignInProps`
+## `CreateOrganizationProps`
 
 All props below are optional.
 
@@ -281,44 +279,33 @@ All props below are optional.
   rows={[
   {
   cells: [
-  "routing",
-  "string",
-  `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`,
+  <code>afterCreateOrganizationUrl</code>,
+  <code>string</code>,
+  "Full URL or path to navigate after creating a new organization.",
   ],
   },
   {
   cells: [
-  "path",
-  "string",
-  "The path where the component is mounted on when path-based routing is used e.g. /sign-in.",
+  <code>path</code>,
+  <code>string</code>,
+  "The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing.",
   ],
   },
   {
   cells: [
-  "redirectUrl",
-  "string",
-  "Full URL or path to navigate after successful sign in or sign up.\n The same as setting afterSignInUrl and afterSignUpUrl to the same value.",
+  <code>routing</code>,
+  <code>RoutingStrategy</code>,
+  `The routing strategy for your pages. Supported values are:
+  - hash (default): Hash based routing.
+  - path: Path based routing.
+  - virtual: Virtual based routing.`,
   ],
   },
   {
   cells: [
-  "afterSignInUrl",
-  "string",
-  "The full URL or path to navigate after a successful sign in.",
-  ],
-  },
-  {
-  cells: [
-  "signUpUrl",
-  "string",
-  "Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered.",
-  ],
-  },
-  {
-  cells: [
-  "afterSignUpUrl",
-  "string",
-  "The full URL or path to navigate after a successful sign up.",
+  <code>appearance</code>,
+  <code>object</code>,
+  "Control the look and feel of the component.",
   ],
   },
   ]}
