--- a/src/pages/reference-js/clerk/sign-in.mdx
+++ b/src/pages/reference-js/clerk/sign-in.mdx
@@ -1,18 +1,20 @@
 import { Tab, Tabs } from "nextra-theme-docs";
+import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `<CreateOrganization />`
+# Sign In Component
 
-<Images alt="Organization Switcher Example" width={992} height={568} src="/images/ui-components/component-org_switcher.svg" />
+<Images width={496} height={564} src="/images/ui-components/component-sign_in.svg" alt="Sign in component example" />
 
-The `CreateOrganization` component is used to render an organization creation
-UI that allows users to create brand new organizations within you application.
+The `SignIn` component renders a UI for signing in users. The functionality of the `SignIn` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `SignIn` component by passing additional properties at the time of rendering.
 
-## `mountCreateOrganization()`
+> All of these are methods on [an instance of the `Clerk` class](TODO).
 
-Render the `CreateOrganization` component to an HTML `<div>` element.
+## `mountSignIn()`
+
+Render the `SignIn` component to an HTML `<div>` element.
 
 ### Usage
 
@@ -23,16 +25,16 @@ Render the `CreateOrganization` component to an HTML `<div>` element.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="create-organization"
+      id="sign-in"
     ></div>
   `;
 
-  const createOrganizationComponent = document.querySelector<HTMLDivElement>('#create-organization')!;
+  const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.mountCreateOrganization(createOrganizationComponent, {
+  clerk.mountSignIn(signInComponent, {
     appearance: {
       baseTheme: dark
     }
@@ -40,7 +42,7 @@ Render the `CreateOrganization` component to an HTML `<div>` element.
   ```
 
   ```html {13-17}
-  <div id="create-organization"></div>
+  <div id="sign-in"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -50,9 +52,9 @@ Render the `CreateOrganization` component to an HTML `<div>` element.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const createOrganizationComponent = document.querySelector('#create-organization');
+      const signInComponent = document.querySelector('#sign-in');
 
-      window.Clerk.mountCreateOrganization(createOrganizationComponent, {
+      window.Clerk.openSignIn(signInComponent, {
         appearance: {
           baseTheme: dark
         }
@@ -66,7 +68,7 @@ Render the `CreateOrganization` component to an HTML `<div>` element.
 ### Props
 
 ```typescript
-function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizationProps): void;
+function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
 ```
 
 <Tables
@@ -76,22 +78,22 @@ function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizatio
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the create-organization component</>
+  <>The <code>{`<div>`}</code> element used to render in the sign-in component</>
   ],
   },
   {
   cells: [
   "props?",
-  <a href="#organizationprofileprops"><code>CreateOrganizationProps</code></a>,
-  "The properties to pass to the create-organization component",
+  <a href="#signinprops"><code>SignInProps</code></a>,
+  "The properties to pass to the sign-in component",
   ],
   },
   ]}
 />
 
-## `unmountCreateOrganization`
+## `unmountSignIn()`
 
-Unmount and run cleanup on an existing CreateOrganization component instance.
+Unmount and run cleanup on an existing SignIn component instance.
 
 ### Usage
 
@@ -101,25 +103,25 @@ Unmount and run cleanup on an existing CreateOrganization component instance.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="create-organization"
+      id="sign-in"
     ></div>
   `
 
-  const createOrganizationComponent = document.querySelector<HTMLDivElement>('#create-organization')!;
+  const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
 
   await clerk.load();
 
-  clerk.mountCreateOrganization(createOrganizationComponent);
+  clerk.mountSignIn(signInComponent);
 
   // ...
 
-  clerk.unmountCreateOrganization(createOrganizationComponent);
+  clerk.unmountSignIn(signInComponent);
   ```
 
   ```html {17}
-  <div id="create-organization"></div>
+  <div id="sign-in"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -129,13 +131,13 @@ Unmount and run cleanup on an existing CreateOrganization component instance.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const createOrganizationComponent = document.querySelector('#create-organization');
+      const signInComponent = document.querySelector('#sign-in');
 
-      window.Clerk.mountCreateOrganization(createOrganizationComponent);
+      window.Clerk.mountSignIn(signInComponent);
 
       // ...
 
-      window.Clerk.unmountCreateOrganization(createOrganizationComponent);
+      window.Clerk.unmountSignIn(signInComponent);
     });
     document.body.appendChild(script);
   </script>
@@ -145,7 +147,7 @@ Unmount and run cleanup on an existing CreateOrganization component instance.
 ### Props
 
 ```typescript
-function unmountCreateOrganization(node: HTMLDivElement): void;
+function unmountSignIn(node: HTMLDivElement): void;
 ```
 
 <Tables
@@ -155,15 +157,15 @@ function unmountCreateOrganization(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered create-organization component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered sign-in component instance</>
   ],
   },
   ]}
 />
 
-## `openCreateOrganization`
+## `openSignIn()`
 
-Opens the CreateOrganization component as an overlay at the root of your HTML `body` element.
+Opens the SignIn component as an overlay at the root of your HTML `body` element.
 
 ### Usage
 
@@ -172,10 +174,10 @@ Opens the CreateOrganization component as an overlay at the root of your HTML `b
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.openCreateOrganization({
+  clerk.openSignIn({
     appearance: {
       baseTheme: dark
     }
@@ -192,7 +194,7 @@ Opens the CreateOrganization component as an overlay at the root of your HTML `b
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      window.Clerk.openCreateOrganization({
+      window.Clerk.openSignIn({
         appearance: {
           baseTheme: dark
         }
@@ -206,7 +208,7 @@ Opens the CreateOrganization component as an overlay at the root of your HTML `b
 ### Props
 
 ```typescript
-function openCreateOrganization(props?: CreateOrganizationProps): void;
+function openSignIn(props?: SignInProps): void;
 ```
 
 <Tables
@@ -215,16 +217,16 @@ function openCreateOrganization(props?: CreateOrganizationProps): void;
   {
   cells: [
   "props?",
-  <a href="#organizationprofileprops"><code>CreateOrganizationProps</code></a>,
-  "The properties to pass to the create-organization component",
+  <a href="#signinprops"><code>SignInProps</code></a>,
+  "The properties to pass to the sign-in component",
   ],
   },
   ]}
 />
 
-## `closeCreateOrganization`
+## `closeSignIn()`
 
-Closes the organization profile overlay.
+Closes the sign in overlay.
 
 ### Usage
 
@@ -233,14 +235,14 @@ Closes the organization profile overlay.
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.openCreateOrganization();
+  clerk.openSignIn();
 
   // ...
 
-  clerk.closeCreateOrganization();
+  clerk.closeSignIn();
   ```
 
   ```html {14}
@@ -253,11 +255,11 @@ Closes the organization profile overlay.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      window.Clerk.openCreateOrganization();
+      window.Clerk.openSignIn();
 
       // ...
 
-      window.Clerk.closeCreateOrganization();
+      window.Clerk.closeSignIn();
     });
     document.body.appendChild(script);
   </script>
@@ -267,10 +269,10 @@ Closes the organization profile overlay.
 ### Props
 
 ```typescript
-function closeCreateOrganization(): void;
+function closeSignIn(): void;
 ```
 
-## `CreateOrganizationProps`
+## `SignInProps`
 
 All props below are optional.
 
@@ -279,33 +281,44 @@ All props below are optional.
   rows={[
   {
   cells: [
-  <code>afterCreateOrganizationUrl</code>,
-  <code>string</code>,
-  "Full URL or path to navigate after creating a new organization.",
+  "routing",
+  "string",
+  `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`,
   ],
   },
   {
   cells: [
-  <code>path</code>,
-  <code>string</code>,
-  "The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing.",
+  "path",
+  "string",
+  "The path where the component is mounted on when path-based routing is used e.g. /sign-in.",
   ],
   },
   {
   cells: [
-  <code>routing</code>,
-  <code>RoutingStrategy</code>,
-  `The routing strategy for your pages. Supported values are:
-  - hash (default): Hash based routing.
-  - path: Path based routing.
-  - virtual: Virtual based routing.`,
+  "redirectUrl",
+  "string",
+  "Full URL or path to navigate after successful sign in or sign up.\n The same as setting afterSignInUrl and afterSignUpUrl to the same value.",
   ],
   },
   {
   cells: [
-  <code>appearance</code>,
-  <code>object</code>,
-  "Control the look and feel of the component.",
+  "afterSignInUrl",
+  "string",
+  "The full URL or path to navigate after a successful sign in.",
+  ],
+  },
+  {
+  cells: [
+  "signUpUrl",
+  "string",
+  "Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered.",
+  ],
+  },
+  {
+  cells: [
+  "afterSignUpUrl",
+  "string",
+  "The full URL or path to navigate after a successful sign up.",
   ],
   },
   ]}
