--- a/src/pages/reference-js/clerk/user-profile.mdx
+++ b/src/pages/reference-js/clerk/user-profile.mdx
@@ -3,16 +3,15 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `<OrganizationProfile />`
+# `<UserProfile />`
 
-<Images alt="Organization Profile Example" width={1024} height={548} src="/images/ui-components/component-org_profile.svg" />
+<Images width={976} height={762} src="/images/ui-components/component-user_profile.svg" alt="UserProfile example" />
 
-The `OrganizationProfile` component is used to render a beautiful, full-featured organization management
-UI that allows users to manage their organization profile and security settings.
+The `UserProfile` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
 
-## `mountOrganizationProfile()`
+## `mountUserProfile()`
 
-Render the `OrganizationProfile` component to an HTML `<div>` element.
+Render the `UserProfile` component to an HTML `<div>` element.
 
 ### Usage
 
@@ -23,16 +22,16 @@ Render the `OrganizationProfile` component to an HTML `<div>` element.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="organization-profile"
+      id="user-profile"
     ></div>
   `;
 
-  const organizationProfileComponent = document.querySelector<HTMLDivElement>('#organization-profile')!;
+  const userProfileComponent = document.querySelector<HTMLDivElement>('#user-profile')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.mountOrganizationProfile(organizationProfileComponent, {
+  clerk.mountUserProfile(userProfileComponent, {
     appearance: {
       baseTheme: dark
     }
@@ -40,7 +39,7 @@ Render the `OrganizationProfile` component to an HTML `<div>` element.
   ```
 
   ```html {13-17}
-  <div id="organization-profile"></div>
+  <div id="user-profile"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -50,9 +49,9 @@ Render the `OrganizationProfile` component to an HTML `<div>` element.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const organizationProfileComponent = document.querySelector('#organization-profile');
+      const userProfileComponent = document.querySelector('#user-profile');
 
-      window.Clerk.mountOrganizationProfile(organizationProfileComponent, {
+      window.Clerk.mountUserProfile(userProfileComponent, {
         appearance: {
           baseTheme: dark
         }
@@ -66,7 +65,7 @@ Render the `OrganizationProfile` component to an HTML `<div>` element.
 ### Props
 
 ```typescript
-function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProfileProps): void;
+function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
 ```
 
 <Tables
@@ -76,22 +75,22 @@ function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProf
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the organization-profile component</>
+  <>The <code>{`<div>`}</code> element used to render in the user-profile component</>
   ],
   },
   {
   cells: [
   "props?",
-  <a href="#organizationprofileprops"><code>OrganizationProfileProps</code></a>,
-  "The properties to pass to the organization-profile component",
+  <a href="#userprofileprops"><code>UserProfileProps</code></a>,
+  "The properties to pass to the user-profile component",
   ],
   },
   ]}
 />
 
-## `unmountOrganizationProfile()`
+## `unmountUserProfile()`
 
-Unmount and run cleanup on an existing OrganizationProfile component instance.
+Unmount and run cleanup on an existing UserProfile component instance.
 
 ### Usage
 
@@ -101,25 +100,25 @@ Unmount and run cleanup on an existing OrganizationProfile component instance.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="organization-profile"
+      id="user-profile"
     ></div>
   `
 
-  const organizationProfileComponent = document.querySelector<HTMLDivElement>('#organization-profile')!;
+  const userProfileComponent = document.querySelector<HTMLDivElement>('#user-profile')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
 
   await clerk.load();
 
-  clerk.mountOrganizationProfile(organizationProfileComponent);
+  clerk.mountUserProfile(userProfileComponent);
 
   // ...
 
-  clerk.unmountOrganizationProfile(organizationProfileComponent);
+  clerk.unmountUserProfile(userProfileComponent);
   ```
 
   ```html {17}
-  <div id="organization-profile"></div>
+  <div id="user-profile"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -129,13 +128,13 @@ Unmount and run cleanup on an existing OrganizationProfile component instance.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const organizationProfileComponent = document.querySelector('#organization-profile');
+      const userProfileComponent = document.querySelector('#user-profile');
 
-      window.Clerk.mountOrganizationProfile(organizationProfileComponent);
+      window.Clerk.mountUserProfile(userProfileComponent);
 
       // ...
 
-      window.Clerk.unmountOrganizationProfile(organizationProfileComponent);
+      window.Clerk.unmountUserProfile(userProfileComponent);
     });
     document.body.appendChild(script);
   </script>
@@ -145,7 +144,7 @@ Unmount and run cleanup on an existing OrganizationProfile component instance.
 ### Props
 
 ```typescript
-function unmountOrganizationProfile(node: HTMLDivElement): void;
+function unmountUserProfile(node: HTMLDivElement): void;
 ```
 
 <Tables
@@ -155,15 +154,15 @@ function unmountOrganizationProfile(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered organization-profile component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered user-profile component instance</>
   ],
   },
   ]}
 />
 
-## `openOrganizationProfile()`
+## `openUserProfile()`
 
-Opens the OrganizationProfile component as an overlay at the root of your HTML `body` element.
+Opens the UserProfile component as an overlay at the root of your HTML `body` element.
 
 ### Usage
 
@@ -172,10 +171,10 @@ Opens the OrganizationProfile component as an overlay at the root of your HTML `
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.openOrganizationProfile({
+  clerk.openUserProfile({
     appearance: {
       baseTheme: dark
     }
@@ -192,7 +191,7 @@ Opens the OrganizationProfile component as an overlay at the root of your HTML `
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      window.Clerk.openOrganizationProfile({
+      window.Clerk.openUserProfile({
         appearance: {
           baseTheme: dark
         }
@@ -206,7 +205,7 @@ Opens the OrganizationProfile component as an overlay at the root of your HTML `
 ### Props
 
 ```typescript
-function openOrganizationProfile(props?: OrganizationProfileProps): void;
+function openUserProfile(props?: UserProfileProps): void;
 ```
 
 <Tables
@@ -215,16 +214,16 @@ function openOrganizationProfile(props?: OrganizationProfileProps): void;
   {
   cells: [
   "props?",
-  <a href="#organizationprofileprops"><code>OrganizationProfileProps</code></a>,
-  "The properties to pass to the organization-profile component",
+  <a href="#userprofileprops"><code>UserProfileProps</code></a>,
+  "The properties to pass to the user-profile component",
   ],
   },
   ]}
 />
 
-## `closeOrganizationProfile()`
+## `closeUserProfile()`
 
-Closes the organization profile overlay.
+Closes the user profile overlay.
 
 ### Usage
 
@@ -233,14 +232,14 @@ Closes the organization profile overlay.
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.openOrganizationProfile();
+  clerk.openUserProfile();
 
   // ...
 
-  clerk.closeOrganizationProfile();
+  clerk.closeUserProfile();
   ```
 
   ```html {14}
@@ -253,11 +252,11 @@ Closes the organization profile overlay.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      window.Clerk.openOrganizationProfile();
+      window.Clerk.openUserProfile();
 
       // ...
 
-      window.Clerk.closeOrganizationProfile();
+      window.Clerk.closeUserProfile();
     });
     document.body.appendChild(script);
   </script>
@@ -267,10 +266,10 @@ Closes the organization profile overlay.
 ### Props
 
 ```typescript
-function closeOrganizationProfile(): void;
+function closeUserProfile(): void;
 ```
 
-## `OrganizationProfileProps`
+## `UserProfileProps`
 
 All props below are optional.
 
@@ -278,34 +277,31 @@ All props below are optional.
   headings={["Name", "Type", "Description"]}
   rows={[
   {
-  cells: [
-  <code>afterLeaveOrganizationUrl</code>,
-  <code>string</code>,
-  "Full URL or path to navigate after leaving an organization.",
-  ],
-  },
-  {
-  cells: [
-  <code>path</code>,
-  <code>string</code>,
-  "The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing.",
-  ],
+  cells: [<code>appearance</code>, <code>object</code>, `Controls the overall look and feel.`],
   },
   {
   cells: [
   <code>routing</code>,
   <code>RoutingStrategy</code>,
   `The routing strategy for your pages. Supported values are:
-  - hash (default): Hash based routing.
-  - path: Path based routing.
-  - virtual: Virtual based routing.`,
+  - Hash (default): Hash based routing.
+  - Path: Path based routing.`,
   ],
   },
   {
   cells: [
-  <code>appearance</code>,
+  <code>path</code>,
+  <code>string</code>,
+  <>The path where the component is mounted when path-based routing is used.
+  <br/>e.g. <code>/user-profile</code>. This prop is ignored in hash-based routing.</>
+  ],
+  },
+  {
+  cells: [
+  <code>additionalOAuthScopes</code>,
   <code>object</code>,
-  "Control the look and feel of the component.",
+  <>Specify additional scopes per OAuth provider that your users would like to provide if not already approved.
+  <br/>e.g. <code>{`{google: ['foo', 'bar'], github: ['qux']}`}</code></>
   ],
   },
   ]}
