--- a/src/pages/reference-js/clerk/organization-profile.mdx
+++ b/src/pages/reference-js/clerk/organization-profile.mdx
@@ -3,15 +3,16 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `<UserProfile />`
+# `<OrganizationProfile />`
 
-<Images width={976} height={762} src="/images/ui-components/component-user_profile.svg" alt="UserProfile example" />
+<Images alt="Organization Profile Example" width={1024} height={548} src="/images/ui-components/component-org_profile.svg" />
 
-The `UserProfile` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
+The `OrganizationProfile` component is used to render a beautiful, full-featured organization management
+UI that allows users to manage their organization profile and security settings.
 
-## `mountUserProfile()`
+## `mountOrganizationProfile()`
 
-Render the `UserProfile` component to an HTML `<div>` element.
+Render the `OrganizationProfile` component to an HTML `<div>` element.
 
 ### Usage
 
@@ -22,16 +23,16 @@ Render the `UserProfile` component to an HTML `<div>` element.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="user-profile"
+      id="organization-profile"
     ></div>
   `;
 
-  const userProfileComponent = document.querySelector<HTMLDivElement>('#user-profile')!;
+  const organizationProfileComponent = document.querySelector<HTMLDivElement>('#organization-profile')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.mountUserProfile(userProfileComponent, {
+  clerk.mountOrganizationProfile(organizationProfileComponent, {
     appearance: {
       baseTheme: dark
     }
@@ -39,7 +40,7 @@ Render the `UserProfile` component to an HTML `<div>` element.
   ```
 
   ```html {13-17}
-  <div id="user-profile"></div>
+  <div id="organization-profile"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -49,9 +50,9 @@ Render the `UserProfile` component to an HTML `<div>` element.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const userProfileComponent = document.querySelector('#user-profile');
+      const organizationProfileComponent = document.querySelector('#organization-profile');
 
-      window.Clerk.mountUserProfile(userProfileComponent, {
+      window.Clerk.mountOrganizationProfile(organizationProfileComponent, {
         appearance: {
           baseTheme: dark
         }
@@ -65,7 +66,7 @@ Render the `UserProfile` component to an HTML `<div>` element.
 ### Props
 
 ```typescript
-function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
+function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProfileProps): void;
 ```
 
 <Tables
@@ -75,22 +76,22 @@ function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the user-profile component</>
+  <>The <code>{`<div>`}</code> element used to render in the organization-profile component</>
   ],
   },
   {
   cells: [
   "props?",
-  <a href="#userprofileprops"><code>UserProfileProps</code></a>,
-  "The properties to pass to the user-profile component",
+  <a href="#organizationprofileprops"><code>OrganizationProfileProps</code></a>,
+  "The properties to pass to the organization-profile component",
   ],
   },
   ]}
 />
 
-## `unmountUserProfile()`
+## `unmountOrganizationProfile()`
 
-Unmount and run cleanup on an existing UserProfile component instance.
+Unmount and run cleanup on an existing OrganizationProfile component instance.
 
 ### Usage
 
@@ -100,25 +101,25 @@ Unmount and run cleanup on an existing UserProfile component instance.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="user-profile"
+      id="organization-profile"
     ></div>
   `
 
-  const userProfileComponent = document.querySelector<HTMLDivElement>('#user-profile')!;
+  const organizationProfileComponent = document.querySelector<HTMLDivElement>('#organization-profile')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
 
   await clerk.load();
 
-  clerk.mountUserProfile(userProfileComponent);
+  clerk.mountOrganizationProfile(organizationProfileComponent);
 
   // ...
 
-  clerk.unmountUserProfile(userProfileComponent);
+  clerk.unmountOrganizationProfile(organizationProfileComponent);
   ```
 
   ```html {17}
-  <div id="user-profile"></div>
+  <div id="organization-profile"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -128,13 +129,13 @@ Unmount and run cleanup on an existing UserProfile component instance.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const userProfileComponent = document.querySelector('#user-profile');
+      const organizationProfileComponent = document.querySelector('#organization-profile');
 
-      window.Clerk.mountUserProfile(userProfileComponent);
+      window.Clerk.mountOrganizationProfile(organizationProfileComponent);
 
       // ...
 
-      window.Clerk.unmountUserProfile(userProfileComponent);
+      window.Clerk.unmountOrganizationProfile(organizationProfileComponent);
     });
     document.body.appendChild(script);
   </script>
@@ -144,7 +145,7 @@ Unmount and run cleanup on an existing UserProfile component instance.
 ### Props
 
 ```typescript
-function unmountUserProfile(node: HTMLDivElement): void;
+function unmountOrganizationProfile(node: HTMLDivElement): void;
 ```
 
 <Tables
@@ -154,15 +155,15 @@ function unmountUserProfile(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered user-profile component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered organization-profile component instance</>
   ],
   },
   ]}
 />
 
-## `openUserProfile()`
+## `openOrganizationProfile()`
 
-Opens the UserProfile component as an overlay at the root of your HTML `body` element.
+Opens the OrganizationProfile component as an overlay at the root of your HTML `body` element.
 
 ### Usage
 
@@ -171,10 +172,10 @@ Opens the UserProfile component as an overlay at the root of your HTML `body` el
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.openUserProfile({
+  clerk.openOrganizationProfile({
     appearance: {
       baseTheme: dark
     }
@@ -191,7 +192,7 @@ Opens the UserProfile component as an overlay at the root of your HTML `body` el
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      window.Clerk.openUserProfile({
+      window.Clerk.openOrganizationProfile({
         appearance: {
           baseTheme: dark
         }
@@ -205,7 +206,7 @@ Opens the UserProfile component as an overlay at the root of your HTML `body` el
 ### Props
 
 ```typescript
-function openUserProfile(props?: UserProfileProps): void;
+function openOrganizationProfile(props?: OrganizationProfileProps): void;
 ```
 
 <Tables
@@ -214,16 +215,16 @@ function openUserProfile(props?: UserProfileProps): void;
   {
   cells: [
   "props?",
-  <a href="#userprofileprops"><code>UserProfileProps</code></a>,
-  "The properties to pass to the user-profile component",
+  <a href="#organizationprofileprops"><code>OrganizationProfileProps</code></a>,
+  "The properties to pass to the organization-profile component",
   ],
   },
   ]}
 />
 
-## `closeUserProfile()`
+## `closeOrganizationProfile()`
 
-Closes the user profile overlay.
+Closes the organization profile overlay.
 
 ### Usage
 
@@ -232,14 +233,14 @@ Closes the user profile overlay.
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.openUserProfile();
+  clerk.openOrganizationProfile();
 
   // ...
 
-  clerk.closeUserProfile();
+  clerk.closeOrganizationProfile();
   ```
 
   ```html {14}
@@ -252,11 +253,11 @@ Closes the user profile overlay.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      window.Clerk.openUserProfile();
+      window.Clerk.openOrganizationProfile();
 
       // ...
 
-      window.Clerk.closeUserProfile();
+      window.Clerk.closeOrganizationProfile();
     });
     document.body.appendChild(script);
   </script>
@@ -266,10 +267,10 @@ Closes the user profile overlay.
 ### Props
 
 ```typescript
-function closeUserProfile(): void;
+function closeOrganizationProfile(): void;
 ```
 
-## `UserProfileProps`
+## `OrganizationProfileProps`
 
 All props below are optional.
 
@@ -277,31 +278,34 @@ All props below are optional.
   headings={["Name", "Type", "Description"]}
   rows={[
   {
-  cells: [<code>appearance</code>, <code>object</code>, `Controls the overall look and feel.`],
-  },
-  {
   cells: [
-  <code>routing</code>,
-  <code>RoutingStrategy</code>,
-  `The routing strategy for your pages. Supported values are:
-  - Hash (default): Hash based routing.
-  - Path: Path based routing.`,
+  <code>afterLeaveOrganizationUrl</code>,
+  <code>string</code>,
+  "Full URL or path to navigate after leaving an organization.",
   ],
   },
   {
   cells: [
   <code>path</code>,
   <code>string</code>,
-  <>The path where the component is mounted when path-based routing is used.
-  <br/>e.g. <code>/user-profile</code>. This prop is ignored in hash-based routing.</>
+  "The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing.",
   ],
   },
   {
   cells: [
-  <code>additionalOAuthScopes</code>,
+  <code>routing</code>,
+  <code>RoutingStrategy</code>,
+  `The routing strategy for your pages. Supported values are:
+  - hash (default): Hash based routing.
+  - path: Path based routing.
+  - virtual: Virtual based routing.`,
+  ],
+  },
+  {
+  cells: [
+  <code>appearance</code>,
   <code>object</code>,
-  <>Specify additional scopes per OAuth provider that your users would like to provide if not already approved.
-  <br/>e.g. <code>{`{google: ['foo', 'bar'], github: ['qux']}`}</code></>
+  "Control the look and feel of the component.",
   ],
   },
   ]}
