--- a/src/pages/reference-js/clerk/organization-switcher.mdx
+++ b/src/pages/reference-js/clerk/organization-switcher.mdx
@@ -5,12 +5,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<OrganizationSwitcher />`
 
-<Images
-  alt="Organization Switcher Example"
-  width={992}
-  height={568}
-  src="/images/ui-components/component-org_switcher.svg"
-/>
+<Images alt="Organization Switcher Example" width={992} height={568} src="/images/ui-components/component-org_switcher.svg" />
 
 The `OrganizationSwitcher` component is used to enable the ability to switch
 between available organizations the user may be part of in your application.
@@ -34,7 +29,7 @@ Render the `OrganizationSwitcher` component to an HTML `<div>` element.
 
   const organizationSwitcherComponent = document.querySelector<HTMLDivElement>('#organization-switcher')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
   clerk.mountOrganizationSwitcher(organizationSwitcherComponent, {
@@ -112,7 +107,7 @@ Unmount and run cleanup on an existing OrganizationSwitcher component instance.
 
   const organizationSwitcherComponent = document.querySelector<HTMLDivElement>('#organization-switcher')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
 
   await clerk.load();
 
@@ -173,96 +168,95 @@ All props below are optional.
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
-    {
-      cells: [
-        <code>afterCreateOrganizationUrl</code>,
-        <code>string</code>,
-        "Full URL or path to navigate after creating a new organization.",
-      ],
-    },
-    {
-      cells: [
-        <code>appearance</code>,
-        <code>object</code>,
-        "Control the look and feel of the component.",
-      ],
-    },
-    {
-      cells: [
-        <code>createOrganizationUrl</code>,
-        <code>string</code>,
-        <>Full URL or path where the <code>{"<CreateOrganization />"}</code> component is mounted.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>organizationProfileUrl</code>,
-        <code>string</code>,
-        <>Full URL or path where the <code>{"<OrganizationProfile />"}</code> component is mounted.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>createOrganizationMode</code>,
-        <code>'modal' | 'navigation'</code>,
-        <>
-          Controls whether clicking the "Create organization" button will cause
-          the <code>CreateOrganization</code> component to open as a modal, or if the browser will navigate
-          to the <code>createOrganizationUrl</code> where <code>CreateOrganization</code> is mounted as a page.
-          <br/>
-          Defaults to: <code>"modal"</code>
-        </>,
-      ],
-    },
-    {
-      cells: [
-        <code>organizationProfileMode</code>,
-        <code>'modal' | 'navigation'</code>,
-        <>
-          Controls whether clicking the "Manage organization" button will cause
-          the <code>OrganizationProfile</code> component to open as a modal, or if the browser will navigate
-          to the <code>organizationProfileUrl</code> where <code>OrganizationProfile</code> is mounted as a page.
-          <br/>
-          Defaults to: <code>"modal"</code>
-        </>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterLeaveOrganizationUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate to after the user leaves the currently active organization.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSwitchOrganizationUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate after a successful organization switch.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>hidePersonal</code>,
-        <code>boolean</code>,
-        <>
-          By default, users can switch between organization and their personal account.
-          This option controls whether OrganizationSwitcher will include the user's personal account
-          in the organization list. Setting this to `false` will hide the personal account entry,
-          and users will only be able to switch between organizations.
-          <br/>
-          Defaults to: <code>true</code>
-        </>,
-      ],
-    },
+  {
+  cells: [
+  <code>afterCreateOrganizationUrl</code>,
+  <code>string</code>,
+  "Full URL or path to navigate after creating a new organization.",
+  ],
+  },
+  {
+  cells: [
+  <code>appearance</code>,
+  <code>object</code>,
+  "Control the look and feel of the component.",
+  ],
+  },
+  {
+  cells: [
+  <code>createOrganizationUrl</code>,
+  <code>string</code>,
+  <>Full URL or path where the <code>{"<CreateOrganization />"}</code> component is mounted.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>organizationProfileUrl</code>,
+  <code>string</code>,
+  <>Full URL or path where the <code>{"<OrganizationProfile />"}</code> component is mounted.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>createOrganizationMode</code>,
+  <code>'modal' | 'navigation'</code>,
+  <>
+  Controls whether clicking the "Create organization" button will cause
+  the <code>CreateOrganization</code> component to open as a modal, or if the browser will navigate
+  to the <code>createOrganizationUrl</code> where <code>CreateOrganization</code> is mounted as a page.
+  <br/>
+  Defaults to: <code>"modal"</code>
+  </>,
+  ],
+  },
+  {
+  cells: [
+  <code>organizationProfileMode</code>,
+  <code>'modal' | 'navigation'</code>,
+  <>
+  Controls whether clicking the "Manage organization" button will cause
+  the <code>OrganizationProfile</code> component to open as a modal, or if the browser will navigate
+  to the <code>organizationProfileUrl</code> where <code>OrganizationProfile</code> is mounted as a page.
+  <br/>
+  Defaults to: <code>"modal"</code>
+  </>,
+  ],
+  },
+  {
+  cells: [
+  <code>afterLeaveOrganizationUrl</code>,
+  <code>string</code>,
+  <>Full URL or path to navigate to after the user leaves the currently active organization.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>afterSwitchOrganizationUrl</code>,
+  <code>string</code>,
+  <>Full URL or path to navigate after a successful organization switch.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>hidePersonal</code>,
+  <code>boolean</code>,
+  <>
+  By default, users can switch between organization and their personal account.
+  This option controls whether OrganizationSwitcher will include the user's personal account
+  in the organization list. Setting this to `false` will hide the personal account entry,
+  and users will only be able to switch between organizations.
+  <br/>
+  Defaults to: <code>true</code>
+  </>,
+  ],
+  },
 
-    {
-      cells: [
-        <code>defaultOpen</code>,
-        <code>boolean</code>,
-        <>Controls the default state of the <code>OrganizationSwitcher</code></>,
-      ],
-    },
+  {
+  cells: [
+  <code>defaultOpen</code>,
+  <code>boolean</code>,
+  <>Controls the default state of the <code>OrganizationSwitcher</code></>,
+  ],
+  },
   ]}
 />
-
