--- a/src/pages/reference-js/clerk/sign-up.mdx
+++ b/src/pages/reference-js/clerk/sign-up.mdx
@@ -31,7 +31,7 @@ Render the `SignUp` component to an HTML `<div>` element.
 
   const signUpComponent = document.querySelector<HTMLDivElement>('#sign-up')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
   clerk.mountSignUp(signUpComponent, {
@@ -109,7 +109,7 @@ Unmount and run cleanup on an existing SignUp component instance.
 
   const signUpComponent = document.querySelector<HTMLDivElement>('#sign-up')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
 
   await clerk.load();
 
@@ -174,7 +174,7 @@ Opens the SignUp component as an overlay at the root of your HTML `body` element
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
   clerk.openSignUp({
@@ -235,7 +235,7 @@ Closes the sign up overlay.
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
   clerk.openSignUp();
