--- a/src/pages/reference-js/clerk/user-button.mdx
+++ b/src/pages/reference-js/clerk/user-button.mdx
@@ -9,7 +9,6 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 The `UserButton` component is used to render the familiar user button UI popularized by Google.
 
-
 ## `mountUserButton()`
 
 Render the `UserButton` component to an HTML `<div>` element.
@@ -29,7 +28,7 @@ Render the `UserButton` component to an HTML `<div>` element.
 
   const userButtonComponent = document.querySelector<HTMLDivElement>('#user-button')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
   clerk.mountUserButton(userButtonComponent, {
@@ -107,7 +106,7 @@ Unmount and run cleanup on an existing UserButton component instance.
 
   const userButtonComponent = document.querySelector<HTMLDivElement>('#user-button')!;
 
-  const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
+  const clerk = new Clerk('pk_[publishable_key]');
 
   await clerk.load();
 
