chore: add initial Clerk object docs

--- a/src/pages/reference-js/clerk/create-organization-component.mdx
+++ b/src/pages/reference-js/clerk/create-organization-component.mdx
@@ -3,7 +3,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `<CreateOrganization />`
+# Create Organization Component
 
 <Images alt="Organization Switcher Example" width={992} height={568} src="/images/ui-components/component-org_switcher.svg" />
 
