--- a/src/pages/reference-js/clerk/organization-profile.mdx
+++ b/src/pages/reference-js/clerk/organization-profile.mdx
@@ -3,7 +3,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `<OrganizationProfile />`
+# Organization Profile Component
 
 <Images alt="Organization Profile Example" width={1024} height={548} src="/images/ui-components/component-org_profile.svg" />
 
