--- a/src/pages/reference-js/clerk/user-button.mdx
+++ b/src/pages/reference-js/clerk/user-button.mdx
@@ -3,7 +3,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `<UserButton />`
+# User Button Component
 
 <Images width={496} height={564} src="/images/ui-components/component-user_button.svg" alt="User Button Example" />
 
