--- a/src/pages/reference-js/clerk/user-profile.mdx
+++ b/src/pages/reference-js/clerk/user-profile.mdx
@@ -3,7 +3,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `<UserProfile />`
+# User Profile Component
 
 <Images width={976} height={762} src="/images/ui-components/component-user_profile.svg" alt="UserProfile example" />
 
