chore: create intial component preview cards

--- a/src/pages/reference-js/clerk/clerk.mdx
+++ b/src/pages/reference-js/clerk/clerk.mdx
@@ -2,6 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
+import { ComponentPreviewCards } from "@/components/ComponentPreviewCards";
 
 # Clerk
 
@@ -28,10 +29,14 @@ This is the main entrypoint class for the `@clerk/clerk-js` package. It contains
 
 ## Components
 
-- [Sign In](/reference-js/clerk/sign-in)
-- [Sign Up](/reference-js/clerk/sign-up)
-- [User Profile](/reference-js/clerk/user-profile)
-- [User Button](/reference-js/clerk/user-button)
-- [Organization Profile](/reference-js/clerk/organization-profile)
-- [Organization Switcher](/reference-js/clerk/organization-switcher)
-- [Create Organiation](/reference-js/clerk/reate-organization-component)
+<div className="container mx-auto my-4">
+  <div className="grid lg:grid-cols-2 lg:grid-rows-4 justify-center gap-x-7">
+    <ComponentPreviewCards title="Sign In" image="/images/ui-components/component-sign_in.svg" link="/reference-js/clerk/sign-in" cta="Read docs"/>
+    <ComponentPreviewCards title="Sign Up" image="/images/ui-components/component-sign_up.svg" link="/reference-js/clerk/sign-up" cta="Read docs"/>
+    <ComponentPreviewCards title="User Profile" image="/images/ui-components/component-user_profile.svg" link="/reference-js/clerk/user-profile" cta="Read docs"/>
+    <ComponentPreviewCards title="User Button" image="/images/ui-components/component-user_button.svg" link="/reference-js/clerk/user-button" cta="Read docs"/>
+    <ComponentPreviewCards title="Organization Profile" image="/images/ui-components/component-org_profile.svg" link="/reference-js/clerk/organization-profile" cta="Read docs"/>
+    <ComponentPreviewCards title="Organization Switcher" image="/images/ui-components/component-org_switcher.svg" link="/reference-js/clerk/organization-switcher" cta="Read docs"/>
+    <ComponentPreviewCards title="Create Organization" image="/images/ui-components/component-org_switcher.svg" link="/reference-js/clerk/create-organization-component" cta="Read docs"/>
+  </div>
+</div>
