--- a/src/pages/reference-js/clerk/create-organization-component.mdx
+++ b/src/pages/reference-js/clerk/create-organization-component.mdx
@@ -5,7 +5,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Create Organization Component
 
-<Images alt="Organization Switcher Example" width={992} height={568} src="/images/ui-components/component-org_switcher.svg" />
+<Images alt="Create Organization Example" width={992} height={568} src="/images/ui-components/component-org_members.svg" />
 
 The `CreateOrganization` component is used to render an organization creation
 UI that allows users to create brand new organizations within you application.
